more wireframing, project and task etc. objects

--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="icon" type="image/x-icon"
-        href="https://cdn.icon-icons.com/icons2/2389/PNG/512/shopify_logo_icon_144894.png">
+        href="https://www.pngkey.com/png/full/445-4450270_gwt-list-icon-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-    
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,8 +20,18 @@
         <div class="titleGridArea">
             <h2>ToDo</h2>
         </div>
-        <div class="sidebarGridArea"></div>
-        <div class="mainGridArea"></div>
+
+
+        <div class="sidebarGridArea">
+
+        </div>
+
+
+        <div class="mainGridArea">
+            <div class="projectsContainer">
+
+            </div>
+        </div>
       </div>
 
       <script src="scripts.js"></script> <!-- external scripts file with logic-->
