rough input form to add new tasks/projects

--- a/index.html
+++ b/index.html
@@ -1,40 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <link rel="icon" type="image/x-icon"
-        href="https://www.pngkey.com/png/full/445-4450270_gwt-list-icon-icon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.pngkey.com/png/full/445-4450270_gwt-list-icon-icon.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
 
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="titleGridArea">
-            <h2>ToDo</h2>
-        </div>
-
-
-        <div class="sidebarGridArea">
-
-        </div>
-
-
-        <div class="mainGridArea">
-            <div class="projectsContainer">
-
-            </div>
+      <div class="titleGridArea">
+        <div class="headerDiv">
+          <h2><i class="fa fa-check" aria-hidden="true"></i> ToDo</h2>
         </div>
       </div>
 
-      <script src="scripts.js"></script> <!-- external scripts file with logic-->
+      <div class="sidebarGridArea">
+        <div class="createTaskFormDiv">
+          
+            <p>Add Task</p>
 
-</body>
+            <label for="taskNameInput">Task name:</label>
+            <input type="text" id="taskNameInput" name="taskNameInput" />
+            <br />
+            <label for="taskDescriptionInput">Description:</label>
+            <textarea
+              rows="4"
+              cols="50"
+              id="taskDescriptionInput"
+              name="taskDescriptionInput"
+            >
+            </textarea>
+
+            <label for="taskDateInput">Due Date:</label>
+            <input
+              value="2022-09-21"
+              min="2022-09-21"
+              max="2022-12-31"
+              type="date"
+              id="taskDateInput"
+              name="taskDateInput"
+            />
+
+            <br>
+
+            <label for="taskPriorityInput">Priority:</label>
+
+            <select name="taskPriorityInput" id="taskPriorityInput">
+              <option value="normal">Normal</option>
+              <option value="low">Low</option>
+              <option value="high">High</option>
+            </select>
+
+            <br>
+            <button type="submit">Add Task</button>
+
+          
+        </div>
+      </div>
+
+      <div class="mainGridArea">
+        <div class="projectsContainer"></div>
+      </div>
+    </div>
+
+    <script src="scripts.js"></script>
+    <!-- external scripts file with logic-->
+  </body>
 </html>
