rough input form cleanup

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 
             <label for="taskNameInput">Task name:</label>
             <input type="text" id="taskNameInput" name="taskNameInput" />
-            <br />
+
+            <label for="projectInput">Project:</label>
+            <input type="text" id="projectInput" name="projectInput" value="example" />
+
+
             <label for="taskDescriptionInput">Description:</label>
             <textarea
               rows="4"
