more logic, handling of creation form

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </select>
 
             <br>
-            <button type="submit">Add Task</button>
+            <button id="addButton" type="submit">Add Task</button>
 
           
         </div>
