visual changes, aligning/style tweaks

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
             <label for="taskDateInput">Due Date:</label>
             <input
+              value="2022-09-31"
               min="2022-09-05"
               max="2023-12-31"
               type="date"
