--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="projectsContainer">
           <div class="editFormPopup">
             <div class="editFormContainer">
-              <p>Edit Task</p>
+              <p id="editTaskHeading">Edit Task</p>
 
               <label for="editTaskNameInput">Task name:</label>
               <input
@@ -114,7 +114,7 @@
 
               <label for="editTaskDateInput">Due Date:</label>
               <input
-                value="2022-09-31"
+                value="2022-09-30"
                 min="2022-09-05"
                 max="2023-12-31"
                 type="date"
