styling border and rounded corner updates

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div class="sidebarGridArea">
         <div class="createTaskFormDiv">
-          <p>Add Task</p>
+          <h2>Add Task</h2>
 
           <label for="taskNameInput">Task name:</label>
           <input type="text" id="taskNameInput" name="taskNameInput" />
