--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="titleGridArea">
         <div class="headerDiv">
-          <h2><i class="fa fa-check" aria-hidden="true"></i> ToDo</h2>
+            <i class="fa fa-check" aria-hidden="true"></i> <h2> ToDo</h2>
         </div>
       </div>
 
@@ -48,8 +48,8 @@
 
           <label for="taskDescriptionInput">Description:</label>
           <textarea
-            rows="4"
-            cols="50"
+            rows="8"
+            cols="20"
             id="taskDescriptionInput"
             name="taskDescriptionInput"
           >
@@ -105,8 +105,8 @@
 
               <label for="editTaskDescriptionInput">Description:</label>
               <textarea
-                rows="4"
-                cols="50"
+                rows="8"
+                cols="20"
                 id="editTaskDescriptionInput"
                 name="editTaskDescriptionInput"
               >
